--- a/1dhrr_TD_Periodic.ipynb
+++ b/1dhrr_TD_Periodic.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -152,8 +152,8 @@
     "            error = (r + gamma*next_value)-current_value\n",
     "            \n",
     "            #V[s] += alpha*error #update V\n",
-    "            W += alpha*error\n",
-    "            bias += alpha*error\n",
+    "            W += alpha*error*states[s]\n",
+    "            #bias += alpha*error\n",
     "            s = new_state #update state s\n",
     "           \n",
     "        #reward absorbed\n",
@@ -163,8 +163,8 @@
     "        current_value = np.dot(states[s],W)+bias\n",
     "        error = r - current_value\n",
     "        #print(\"Error =\",error)\n",
-    "        W += alpha*error\n",
-    "        bias += alpha*error\n",
+    "        W += alpha*error*states[s]\n",
+    "        #bias += alpha*error\n",
     "        #print(list(map(lambda x: np.dot(x,W)+bias, states)))\n",
     "        #V[s] += error\n",
     "        ##############\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -206,26 +206,26 @@
           9
          ],
          "y": [
-          2.408445891889358,
-          1.1480616682817837,
-          0.7667965241913022,
-          0.228387983463458,
-          1.4599514222036167,
-          0.6559915670241352,
-          0.5248619029481647,
-          2.902760413331379,
-          1.747960641020411,
-          0.885777377419767
+          0.9998994519873664,
+          0.4986766531117165,
+          0.24840834119509309,
+          0.12314405522282255,
+          0.06148951998931962,
+          0.030982795028151253,
+          0.06118895339967803,
+          0.12302706435661662,
+          0.24834716298194137,
+          0.4991942671310272
          ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"67c22db8-80e7-4ec5-ba3b-b2c828dfff4a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"67c22db8-80e7-4ec5-ba3b-b2c828dfff4a\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [2.408445891889358, 1.1480616682817837, 0.7667965241913022, 0.228387983463458, 1.4599514222036167, 0.6559915670241352, 0.5248619029481647, 2.902760413331379, 1.747960641020411, 0.885777377419767], \"type\": \"scatter\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"3c2475d1-a737-4b5b-b609-32d3182af1fc\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3c2475d1-a737-4b5b-b609-32d3182af1fc\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.9998994519873664, 0.4986766531117165, 0.24840834119509309, 0.12314405522282255, 0.06148951998931962, 0.030982795028151253, 0.06118895339967803, 0.12302706435661662, 0.24834716298194137, 0.4991942671310272], \"type\": \"scatter\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"67c22db8-80e7-4ec5-ba3b-b2c828dfff4a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"67c22db8-80e7-4ec5-ba3b-b2c828dfff4a\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [2.408445891889358, 1.1480616682817837, 0.7667965241913022, 0.228387983463458, 1.4599514222036167, 0.6559915670241352, 0.5248619029481647, 2.902760413331379, 1.747960641020411, 0.885777377419767], \"type\": \"scatter\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"3c2475d1-a737-4b5b-b609-32d3182af1fc\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3c2475d1-a737-4b5b-b609-32d3182af1fc\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.9998994519873664, 0.4986766531117165, 0.24840834119509309, 0.12314405522282255, 0.06148951998931962, 0.030982795028151253, 0.06118895339967803, 0.12302706435661662, 0.24834716298194137, 0.4991942671310272], \"type\": \"scatter\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -233,7 +233,7 @@
     }
    ],
    "source": [
-    "TD(10,10000,1,.9)"
+    "TD(10,10000,.01,.5)"
    ]
   },
   {
