--- a/1dhrr_TD_Periodic.ipynb
+++ b/1dhrr_TD_Periodic.ipynb
@@ -121,7 +121,7 @@
     "    \n",
     "    #initialize weight vector with small random values\n",
     "    W = np.random.random(n)*.01\n",
-    "    bias = 0\n",
+    "    bias = 1 # start optimistically\n",
     "    \n",
     "    num_episodes = num_ep\n",
     "    #V = [0]*v_size\n",
