--- a/HRR_SARSA_1D.ipynb
+++ b/HRR_SARSA_1D.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -75,14 +75,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# state 2 is where the cheese is\n",
-    "# 1X3 maze\n",
     "\n",
     "def reward(s):\n",
     "    if s == 0:\n",
@@ -146,7 +144,7 @@
     "        curr_sa = 0\n",
     "        \n",
     "        while s != t_state:\n",
-    "            new_action,new_state = policy(s,states,W,bias,a,actions) #get new state\n",
+    "            new_action,new_state = policy(s,states,W,bias,a,actions) #get new state and new action\n",
     "            r = reward(s) #get reward at state s\n",
     "            \n",
     "            ## state action vector\n",
@@ -185,10 +183,10 @@
     "        #print(V)\n",
     "    V1 = list(map(lambda x: np.dot(hrr.convolve(x,actions[0]),W)+bias, states))\n",
     "    V2 = list(map(lambda x: np.dot(hrr.convolve(x,actions[1]),W)+bias, states))\n",
-    "    data = [V1,V2]\n",
+    "    \n",
     "    plotly.offline.iplot([\n",
-    "    dict(x=[x for x in range(len(V1))] , y=V1, type='scatter'),\n",
-    "    dict(x=[x for x in range(len(V1))] , y=V2, type='scatter')\n",
+    "    dict(x=[x for x in range(len(V1))] , y=V1, type='scatter',name='left'),\n",
+    "    dict(x=[x for x in range(len(V1))] , y=V2, type='scatter',name='right')\n",
     "    ])\n",
     "    '''\n",
     "    print('Final V is',V)\n",
@@ -199,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -209,6 +207,7 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
+         "name": "left",
          "type": "scatter",
          "x": [
           0,
@@ -223,19 +222,20 @@
           9
          ],
          "y": [
-          1.284953517809818,
-          0.821688414272733,
-          0.409506009856053,
-          0.20415384869530695,
-          0.1041780208538643,
-          0.05041385565257972,
-          0.07932599029090226,
-          0.18560523399340212,
-          0.3533911795931587,
-          0.7091256415901609
+          0.8537072611757244,
+          0.7115310083018109,
+          0.3561698041243808,
+          0.17665030408865612,
+          0.08953938872650169,
+          0.032211777483181936,
+          0.07682428672297303,
+          0.20559982649913822,
+          0.35769266717009285,
+          0.6952137901234097
          ]
         },
         {
+         "name": "right",
          "type": "scatter",
          "x": [
           0,
@@ -250,26 +250,26 @@
           9
          ],
          "y": [
-          0.8746153465506351,
-          0.8224914255266573,
-          0.40737919008790313,
-          0.20601854926383156,
-          0.13650584394960186,
-          0.0630706288501035,
-          0.09488581798171447,
-          0.17646048532791525,
-          0.3570551932189495,
-          0.7198584068064962
+          0.7416431384547635,
+          0.7142625875426796,
+          0.36052097662144433,
+          0.18152827200709332,
+          0.09470337843148036,
+          0.04145174121648576,
+          0.08121891651811874,
+          0.17105822907750257,
+          0.34247194164996775,
+          0.6876282381000127
          ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"3f8582c4-cc2b-439b-a073-100906812544\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3f8582c4-cc2b-439b-a073-100906812544\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [1.284953517809818, 0.821688414272733, 0.409506009856053, 0.20415384869530695, 0.1041780208538643, 0.05041385565257972, 0.07932599029090226, 0.18560523399340212, 0.3533911795931587, 0.7091256415901609], \"type\": \"scatter\"}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.8746153465506351, 0.8224914255266573, 0.40737919008790313, 0.20601854926383156, 0.13650584394960186, 0.0630706288501035, 0.09488581798171447, 0.17646048532791525, 0.3570551932189495, 0.7198584068064962], \"type\": \"scatter\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"1cac30c3-c32e-4006-8005-191cc849d1d8\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"1cac30c3-c32e-4006-8005-191cc849d1d8\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.8537072611757244, 0.7115310083018109, 0.3561698041243808, 0.17665030408865612, 0.08953938872650169, 0.032211777483181936, 0.07682428672297303, 0.20559982649913822, 0.35769266717009285, 0.6952137901234097], \"type\": \"scatter\", \"name\": \"left\"}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.7416431384547635, 0.7142625875426796, 0.36052097662144433, 0.18152827200709332, 0.09470337843148036, 0.04145174121648576, 0.08121891651811874, 0.17105822907750257, 0.34247194164996775, 0.6876282381000127], \"type\": \"scatter\", \"name\": \"right\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"3f8582c4-cc2b-439b-a073-100906812544\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3f8582c4-cc2b-439b-a073-100906812544\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [1.284953517809818, 0.821688414272733, 0.409506009856053, 0.20415384869530695, 0.1041780208538643, 0.05041385565257972, 0.07932599029090226, 0.18560523399340212, 0.3533911795931587, 0.7091256415901609], \"type\": \"scatter\"}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.8746153465506351, 0.8224914255266573, 0.40737919008790313, 0.20601854926383156, 0.13650584394960186, 0.0630706288501035, 0.09488581798171447, 0.17646048532791525, 0.3570551932189495, 0.7198584068064962], \"type\": \"scatter\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"1cac30c3-c32e-4006-8005-191cc849d1d8\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"1cac30c3-c32e-4006-8005-191cc849d1d8\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.8537072611757244, 0.7115310083018109, 0.3561698041243808, 0.17665030408865612, 0.08953938872650169, 0.032211777483181936, 0.07682428672297303, 0.20559982649913822, 0.35769266717009285, 0.6952137901234097], \"type\": \"scatter\", \"name\": \"left\"}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.7416431384547635, 0.7142625875426796, 0.36052097662144433, 0.18152827200709332, 0.09470337843148036, 0.04145174121648576, 0.08121891651811874, 0.17105822907750257, 0.34247194164996775, 0.6876282381000127], \"type\": \"scatter\", \"name\": \"right\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -278,29 +278,6 @@
    ],
    "source": [
     "TD(10,10000,.01,.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-0.38342166 -0.38684364  0.04789448  0.04221232  0.02771509 -0.38990873\n",
-      " -0.19107692 -0.26906366  0.14885545 -0.12482073]\n"
-     ]
-    }
-   ],
-   "source": [
-    "left = hrr.hrr(10)\n",
-    "right = hrr.hrr(10)\n",
-    "c = random.choice([left,right])\n",
-    "print(c)"
    ]
   },
   {
