added new sarsa

--- a/HRR_SARSA_1D.ipynb
+++ b/HRR_SARSA_1D.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -97,13 +97,13 @@
     "    left = ((s-1)+len(S))%len(S)\n",
     "    right = ((s+1)+len(S))%len(S)\n",
     "    \n",
-    "    if x < ep or valuefunc(right,S,W,bias,a,A) == valuefunc(left,S,W,bias,a,A):\n",
+    "    if x < ep or valuefunc(s,S,W,bias,1,A) == valuefunc(s,S,W,bias,0,A):\n",
     "        c = random.choice([left,right])\n",
     "        if c == left:\n",
     "            return 0,left\n",
     "        else:\n",
     "            return 1,right\n",
-    "    elif valuefunc(right,S,W,bias,a,A) > valuefunc(left,S,W,bias,a,A):\n",
+    "    elif valuefunc(s,S,W,bias,1,A) > valuefunc(s,S,W,bias,0,A):\n",
     "        return 1,right\n",
     "    else:\n",
     "        return 0,left\n",
@@ -139,10 +139,9 @@
     "        s = random.randrange(0,v_size)\n",
     "        a = random.randrange(0,2)\n",
     "        t_state = 0\n",
-    "        current_value = 0\n",
     "        next_value = 0\n",
-    "        curr_sa = 0\n",
-    "        \n",
+    "        curr_sa = hrr.convolve(states[s],actions[a])\n",
+    "        current_value = np.dot(curr_sa,W)+bias\n",
     "        while s != t_state:\n",
     "            new_action,new_state = policy(s,states,W,bias,a,actions) #get new state and new action\n",
     "            r = reward(s) #get reward at state s\n",
@@ -197,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -222,16 +221,16 @@
           9
          ],
          "y": [
-          0.8537072611757244,
-          0.7115310083018109,
-          0.3561698041243808,
-          0.17665030408865612,
-          0.08953938872650169,
-          0.032211777483181936,
-          0.07682428672297303,
-          0.20559982649913822,
-          0.35769266717009285,
-          0.6952137901234097
+          0.6555603246886839,
+          0.6582297347037742,
+          0.005193972156893767,
+          0.010599938666579822,
+          0.01884393522984662,
+          0.0019286138904608396,
+          0.0020924163631198534,
+          0.03918184864624086,
+          0.00664292940499156,
+          1.2628475236345764
          ]
         },
         {
@@ -250,26 +249,26 @@
           9
          ],
          "y": [
-          0.7416431384547635,
-          0.7142625875426796,
-          0.36052097662144433,
-          0.18152827200709332,
-          0.09470337843148036,
-          0.04145174121648576,
-          0.08121891651811874,
-          0.17105822907750257,
-          0.34247194164996775,
-          0.6876282381000127
+          0.691636103022395,
+          0.33860315186958134,
+          0.7500422924803489,
+          0.0004618231319016841,
+          0.0031577951605096244,
+          -0.002130216446093236,
+          -0.0005209544346467254,
+          0.00041921787897503116,
+          0.028453939304943665,
+          0.01457918854866247
          ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"1cac30c3-c32e-4006-8005-191cc849d1d8\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"1cac30c3-c32e-4006-8005-191cc849d1d8\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.8537072611757244, 0.7115310083018109, 0.3561698041243808, 0.17665030408865612, 0.08953938872650169, 0.032211777483181936, 0.07682428672297303, 0.20559982649913822, 0.35769266717009285, 0.6952137901234097], \"type\": \"scatter\", \"name\": \"left\"}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.7416431384547635, 0.7142625875426796, 0.36052097662144433, 0.18152827200709332, 0.09470337843148036, 0.04145174121648576, 0.08121891651811874, 0.17105822907750257, 0.34247194164996775, 0.6876282381000127], \"type\": \"scatter\", \"name\": \"right\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"a961e47c-1b28-4f45-9bb7-23e7f2f23b5f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a961e47c-1b28-4f45-9bb7-23e7f2f23b5f\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.6555603246886839, 0.6582297347037742, 0.005193972156893767, 0.010599938666579822, 0.01884393522984662, 0.0019286138904608396, 0.0020924163631198534, 0.03918184864624086, 0.00664292940499156, 1.2628475236345764], \"type\": \"scatter\", \"name\": \"left\"}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.691636103022395, 0.33860315186958134, 0.7500422924803489, 0.0004618231319016841, 0.0031577951605096244, -0.002130216446093236, -0.0005209544346467254, 0.00041921787897503116, 0.028453939304943665, 0.01457918854866247], \"type\": \"scatter\", \"name\": \"right\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"1cac30c3-c32e-4006-8005-191cc849d1d8\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"1cac30c3-c32e-4006-8005-191cc849d1d8\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.8537072611757244, 0.7115310083018109, 0.3561698041243808, 0.17665030408865612, 0.08953938872650169, 0.032211777483181936, 0.07682428672297303, 0.20559982649913822, 0.35769266717009285, 0.6952137901234097], \"type\": \"scatter\", \"name\": \"left\"}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.7416431384547635, 0.7142625875426796, 0.36052097662144433, 0.18152827200709332, 0.09470337843148036, 0.04145174121648576, 0.08121891651811874, 0.17105822907750257, 0.34247194164996775, 0.6876282381000127], \"type\": \"scatter\", \"name\": \"right\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"a961e47c-1b28-4f45-9bb7-23e7f2f23b5f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a961e47c-1b28-4f45-9bb7-23e7f2f23b5f\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.6555603246886839, 0.6582297347037742, 0.005193972156893767, 0.010599938666579822, 0.01884393522984662, 0.0019286138904608396, 0.0020924163631198534, 0.03918184864624086, 0.00664292940499156, 1.2628475236345764], \"type\": \"scatter\", \"name\": \"left\"}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.691636103022395, 0.33860315186958134, 0.7500422924803489, 0.0004618231319016841, 0.0031577951605096244, -0.002130216446093236, -0.0005209544346467254, 0.00041921787897503116, 0.028453939304943665, 0.01457918854866247], \"type\": \"scatter\", \"name\": \"right\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -277,7 +276,7 @@
     }
    ],
    "source": [
-    "TD(10,10000,.01,.5)"
+    "TD(10,1009,.01,.5)"
    ]
   },
   {
