--- a/TD_HRR_SARSA_1D_WM_3rd_stage.ipynb
+++ b/TD_HRR_SARSA_1D_WM_3rd_stage.ipynb
@@ -60,19 +60,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def argmax(arr_2d,restrict):\n",
-    "    max_row = 0\n",
+    "    max_row = restrict[0]\n",
     "    max_col = 0\n",
-    "    max_value = arr_2d[0,0]\n",
+    "    #max_value = arr_2d[0,0]\n",
+    "    max_value = arr_2d[restrict[0],0]\n",
     "    for row in range(arr_2d.shape[0]):\n",
     "        if row not in restrict:\n",
     "            continue\n",
-    "    \n",
     "        for col in range(arr_2d.shape[1]):\n",
     "            if arr_2d[row,col] > max_value:\n",
     "                max_value = arr_2d[row,col]\n",
@@ -148,31 +146,38 @@
     "    #nepisodes = 10000\n",
     "    nsteps = 100\n",
     "    \n",
-    "    color_signal = -1\n",
+    "    #color_signal = -1\n",
     "    #current_wm = 2\n",
     "    for episode in range(nepisodes):\n",
     "        state = random.randrange(0,nstates)\n",
     "        \n",
     "        # cue to signal context\n",
     "        color_signal = random.randrange(0,ncolors+1)\n",
+    "        \n",
     "        #color_signal = (color_signal+1)%3\n",
     "        #color_signal = 0\n",
     "        # set external cue\n",
     "        cue = color_signal\n",
     "        color = cue\n",
     "        #print(\"episode:\",episode,\"cue:\",cue)\n",
-    "        # set context \n",
+    "        #set context \n",
     "        #current_wm = 2\n",
     "        \n",
     "        values = np.dot(s_s_a_wm[color,:,state,:,:],W) + bias\n",
     "        possible_wm = np.unique(np.array([2,color_signal]))\n",
     "        wm_action = argmax(values,possible_wm)\n",
+    "        #print('values:',values)\n",
     "        current_wm = wm_action[0]\n",
     "        action = wm_action[1]\n",
-    "        \n",
+    "        #print('episode:',episode,'possible_wm:',possible_wm)\n",
+    "        #print('wm_action:',wm_action)\n",
+    "        #print('current_wm:',current_wm,'action:',action)\n",
     "        if random.random() < epsilon:\n",
     "            action = random.randrange(0,nactions)\n",
     "            current_wm = random.choice(possible_wm)\n",
+    "            #print('episode:',episode)\n",
+    "            #print('possible_random:',possible_wm)\n",
+    "            #print('picked_random:',current_wm)\n",
     "        values = values[current_wm,action]\n",
     "        eligibility = np.zeros(n)\n",
     "        \n",
@@ -205,15 +210,19 @@
     "            values = np.dot(s_s_a_wm[cue,:,state,:,:],W) + bias \n",
     "            #action = values.argmax()\n",
     "            possible_wm = np.unique(np.array([2,previous_wm,psignal]))\n",
-    "            \n",
     "            wm_action = argmax(values,possible_wm)\n",
-    "            \n",
+    "            #print('values:',values)\n",
     "            current_wm = wm_action[0]\n",
     "            action = wm_action[1]\n",
-    "            \n",
+    "            #print('episode:',episode,'possible_wm:',possible_wm)\n",
+    "            #print('wm_action:',wm_action)\n",
+    "            #print('current_wm:',current_wm,'action:',action)\n",
     "            if random.random() < epsilon:\n",
     "                action = random.randrange(0,nactions)\n",
     "                current_wm = random.choice(possible_wm)\n",
+    "                #print('episode:',episode)\n",
+    "                #print('possible_random:',possible_wm)\n",
+    "                #print('picked_random:',current_wm)\n",
     "            \n",
     "            values = values[current_wm,action]\n",
     "            #print('values:',values)\n",
@@ -238,10 +247,10 @@
     "            dict(x=[x for x in range(len(V1))] , y=V2, type='scatter',name='right and cue_2 and wm_0'),\n",
     "            dict(x=[x for x in range(len(V1))] , y=V3, type='scatter',name='left and cue_2 and wm_1'),\n",
     "            dict(x=[x for x in range(len(V1))] , y=V4, type='scatter',name='right and cue_2 and wm_1'),\n",
-    "            dict(x=[x for x in range(len(V1))] , y=V1, type='scatter',name='left and cue_0 and wm_2'),\n",
-    "            dict(x=[x for x in range(len(V1))] , y=V2, type='scatter',name='right and cue_0 and wm_2'),\n",
-    "            dict(x=[x for x in range(len(V1))] , y=V3, type='scatter',name='left and cue_1 and wm_2'),\n",
-    "            dict(x=[x for x in range(len(V1))] , y=V4, type='scatter',name='right and cue_1 and wm_2')\n",
+    "            dict(x=[x for x in range(len(V1))] , y=V5, type='scatter',name='left and cue_0 and wm_2'),\n",
+    "            dict(x=[x for x in range(len(V1))] , y=V6, type='scatter',name='right and cue_0 and wm_2'),\n",
+    "            dict(x=[x for x in range(len(V1))] , y=V7, type='scatter',name='left and cue_1 and wm_2'),\n",
+    "            dict(x=[x for x in range(len(V1))] , y=V8, type='scatter',name='right and cue_1 and wm_2')\n",
     "            ])\n",
     "            \n",
     "    V1 = list(map(lambda x: np.dot(x,W)+bias, s_s_a_wm[0,0,:,0,:]))\n",
@@ -280,8 +289,8 @@
     "    dict(x=[x for x in range(len(V1))] , y=V14, type='scatter',name='right and cue_2 and wm_2'),\n",
     "    dict(x=[x for x in range(len(V1))] , y=V15, type='scatter',name='left and cue_2 and wm_1'),\n",
     "    dict(x=[x for x in range(len(V1))] , y=V16, type='scatter',name='right and cue_2 and wm_1'),\n",
-    "    dict(x=[x for x in range(len(V1))] , y=V15, type='scatter',name='left and cue_2 and wm_0'),\n",
-    "    dict(x=[x for x in range(len(V1))] , y=V16, type='scatter',name='right and cue_2 and wm_0')    \n",
+    "    dict(x=[x for x in range(len(V1))] , y=V17, type='scatter',name='left and cue_2 and wm_0'),\n",
+    "    dict(x=[x for x in range(len(V1))] , y=V18, type='scatter',name='right and cue_2 and wm_0')    \n",
     "    ])"
    ]
   },
@@ -291,7 +300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TD(10,10000,.1,.9,.5)\n",
+    "TD(30,50000,.1,.9,.5)\n",
     "#inputs: nstates,nepisodes,lrate,gamma,td_lambda"
    ]
   },
